Upload size limit increased ; chat stretch issue resolved

--- a/public/style.css
+++ b/public/style.css
@@ -111,7 +111,7 @@ body {
 
 .chat-body .message .message-text { 
     padding: 12px 16px;
-    max-width: 75%;
+    max-width: 620px;
     font-size: 0.95rem;
     background: #F2F2FF;
 
@@ -133,7 +133,8 @@ body {
 }
 
 .chat-body .user-message .attachment {
-    width: 50%;
+    max-width: 350px;
+    width: 100%;
     margin-top: -7px;
     border-radius: 13px 3px 13px 13px;
 }
